# stl-templates-variants-visitors

./: .directory  .gitignore  CMakeLists.txt  HowTo.cpp  tools.cpp  utility.cpp  utility.hpp
basic/: CMakeLists.txt
basic/BarGraph/: CMakeLists.txt  graph.cpp  graph.hpp  input  item.hpp  main.cpp  row.cpp  row.hpp  rowNest.hpp  tools.hpp
basic/BracketsWithMove/: CMakeLists.txt  Makefile  brackets.cpp  brackets.hpp  main.cpp  stack.cpp  stack.hpp  text6  token.cpp  token.hpp  tools.cpp  tools.hpp
basic/Evaluate/: CMakeLists.txt
basic/SpecialMbrFcns/: CMakeLists.txt  special  special.cpp
computer-systems-book/: CMakeLists.txt
computer-systems-book/basic/: CMakeLists.txt  main.c  mstore.c  readme.md
const_expression/: CMakeLists.txt  main.cpp
constexpression/: main.cpp
containers/: CMakeLists.txt  array.hpp  main.cpp  stack.hpp
contracts/: CMakeLists.txt  length.cpp  length.hpp  main.cpp
functors/: CMakeLists.txt  closure.cpp  funtypes.cpp  sort-functor.cpp  sort-funptr.cpp  sort-lambda.cpp  using.cpp
raii/: CMakeLists.txt  special.cpp
smart_pointer/: CMakeLists.txt  SPtr.hpp
smartpointer/: CMakeLists.txt  Makefile  SPtr.hpp  Serial.hpp  main.cpp
static_assert/: CMakeLists.txt  main.cpp
stl/: CMakeLists.txt  stl.cpp  stl.hpp  stl_all_any_none_of.cpp  stl_copy.cpp  stl_count.cpp  stl_distance.cpp  stl_find.cpp  stl_find_first_of.cpp  stl_for_each.cpp  stl_generate.cpp  stl_heap.cpp  stl_is_sorted_until.cpp  stl_max.cpp  stl_max_element.cpp  stl_mimmax_element.cpp  stl_min.cpp  stl_min_element.cpp  stl_remove.cpp  stl_transform.cpp
stl/vector/: delete-quick.cpp  erase-remove-idiom.cpp  insert_sorted.cpp
templates/: CMakeLists.txt  templates.cpp
type_support_supported_operations/: CMakeLists.txt  supported_operations.cpp
variants/: CMakeLists.txt  Variants.cpp  Variants1.cpp  Variants2.cpp  Variants3.cpp
visitors/: CMakeLists.txt  ast.cpp  ast.hpp  evaluatorVisitor.hpp  main.cpp  printerVisitor.hpp  visitor.hpp
