add_executable(stl_for_each
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_for_each.cpp)

add_executable(stl_transform
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_transform.cpp)

add_executable(stl_find
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_find.cpp)

add_executable(stl_count
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_count.cpp)

add_executable(stl_find_first_of
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_find_first_of.cpp)

add_executable(stl_all_any_none_of
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_all_any_none_of.cpp)

add_executable(stl_copy
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_copy.cpp)

add_executable(stl_generate
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_generate.cpp)

add_executable(stl_remove
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_remove.cpp)

add_executable(stl_max_element
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_max_element.cpp)

add_executable(stl_min_element
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_min_element.cpp)

add_executable(stl_min
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_min.cpp)

add_executable(stl_minmax_element
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_mimmax_element.cpp)

add_executable(stl_max
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_max.cpp)

add_executable(stl_heap
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_heap.cpp)

add_executable(stl_is_sorted_until
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_is_sorted_until.cpp)

add_executable(stl_distance
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        stl_distance.cpp)

################################

add_executable(erase-remove-idiom
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        vector/erase-remove-idiom.cpp)


add_executable(insert-sorted
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        vector/insert_sorted.cpp)

add_executable(delete-quick
        ../utility.cpp
        ../utility.hpp
        stl.cpp
        stl.hpp
        vector/delete-quick.cpp)


################################
